Attempt to fix background image on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
     margin-top: 50px;
     background: none;
+    height: 100%;
 }
 
 .full {
